--- a/style.css
+++ b/style.css
@@ -1,5 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@1,300&family=Cormorant:ital@0;1&family=Cutive+Mono&family=Great+Vibes&family=Roboto+Mono:ital,wght@0,100;1,100&display=swap');
 
+.custom_modal{
+  background-color: #292929c2;
+  height: 100%;
+  position: absolute;
+  width: 100%;
+  z-index: 10;
+}
+
+.custom_modal_item{
+  background-color: #292929f0;
+}
+
 body {
   min-height:100%;
   background-color: #33192e;
